crates/zakura-state/src/service/finalized_state/disk_format/tests/snapshots/explorer_daily_stats_raw_data_with_indexer@testnet_1.snap
---
source: crates/zakura-state/src/service/finalized_state/disk_format/tests/snapshot.rs
expression: cf_data
---
[
  KV(
    k: "000042ce",
    v: "ce4200000000000001000000238d665a062b9007836a7d8f968ba2f3847af5f542733389a952cf9b86795502a11e1358000000000100000000000000e985135800000000a11e135800000000e9851358000000000800000000000000312e303030303030010000000000000024f40000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000024f400000000000024f40000000000000200000000000000020000000000000002000000000000004000000000000000000000000000000000000000000000000000000000000000ee0c00000000000024f4000000000000000000000000000050c30000000000000000000000000000d430000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000024f40000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000020000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000200000000000000000000000000000000000000000000000000000000000000000000000000000024f4000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000",
  ),
]
