crates/zakura-state/src/service/finalized_state/disk_format/tests/snapshots/explorer_daily_stats_raw_data_with_indexer@testnet_2.snap
---
source: crates/zakura-state/src/service/finalized_state/disk_format/tests/snapshot.rs
expression: cf_data
---
[
  KV(
    k: "000042ce",
    v: "ce4200000000000002000000181ac2d6dc0ae73a82d7db472ac2879a7c24d8b12e5f73efc33a55549ea4f100a11e1358000000000200000000000000898c135800000000a11e135800000000898c1358000000000800000000000000312e30303030303001000000000000006cdc020000000000000000000000000000000000000000000000000000000000000000000000000000000000000000006cdc02000000000048e8010000000000030000000000000003000000000000000300000000000000600000000000000000000000000000000000000000000000000000000000000040130000000000006cdc0200000000000000000000000000f04902000000000000000000000000007c9200000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000006cdc020000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000003000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000030000000000000000000000000000000000000000000000000000000000000000000000000000006cdc020000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000",
  ),
]
