crates/zakura-state/src/service/finalized_state/disk_format/tests/snapshots/explorer_shielded_tx_by_class_loc_raw_data_with_indexer@testnet_2.snap
---
source: crates/zakura-state/src/service/finalized_state/disk_format/tests/snapshot.rs
expression: cf_data
---
[]
