crates/zakura-state/src/service/finalized_state/disk_format/tests/snapshots/explorer_tx_by_kind_loc_raw_data_with_indexer@testnet_2.snap
---
source: crates/zakura-state/src/service/finalized_state/disk_format/tests/snapshot.rs
expression: cf_data
---
[
  KV(
    k: "030000000000",
    v: "",
  ),
  KV(
    k: "030000010000",
    v: "",
  ),
  KV(
    k: "030000020000",
    v: "",
  ),
]
