crates/zakura-state/src/service/finalized_state/disk_format/tests/snapshots/explorer_tx_meta_by_loc_raw_data_with_indexer@mainnet_2.snap
---
source: crates/zakura-state/src/service/finalized_state/disk_format/tests/snapshot.rs
expression: cf_data
---
[
  KV(
    k: "0000000000",
    v: "000000cc0000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000010000000000000000000000000000000000000000",
  ),
  KV(
    k: "0000010000",
    v: "000000810000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000020000000000000000000000000000000000000000",
  ),
  KV(
    k: "0000020000",
    v: "000000810000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000020000000000000000000000000000000000000000",
  ),
]
